[package]
name = "tokio-either"
description = "Either for Tokio"
repository = "https://github.com/Hirrolot/tokio-either"
version = "0.1.1"
authors = ["Temirkhan Myrzamadi <hirrolot@gmail.com>"]
keywords = ["tokio", "either"]
categories = ["asynchronous", "rust-patterns"]
edition = "2018"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.6", features = ["full"] }